Refactored the search endpoint. Updated the project documentation. Fixed unit tests.
